# Expense-Tracker-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
expense_tracker/: __init__.py  api.py  cli.py  config.py  db.py
